List repo URLs as dependencies.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 ---
 dependencies:
-  - role: ansible-role-ustreamer
-  - role: ansible-role-nginx
+  - src: https://github.com/tiny-pilot/ansible-role-ustreamer
+  - src: https://github.com/tiny-pilot/ansible-role-nginx
 
 galaxy_info:
   role_name: tinypilot
