--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,4 +1,8 @@
 ---
+dependencies:
+  - src: https://github.com/tiny-pilot/ansible-role-ustreamer
+  - src: https://github.com/tiny-pilot/ansible-role-nginx
+
 galaxy_info:
   role_name: tinypilot
   author: Michael Lynch
