--- a/molecule/requirements.txt
+++ b/molecule/requirements.txt
@@ -8,57 +8,52 @@
 
 # Direct dependencies
 
-ansible==2.9.10
+ansible==2.10.7
 molecule==3.2.3
 molecule-docker==0.2.4
 
 # Indirect dependencies
 
-arrow==1.0.3
-bcrypt==3.2.0
+ansible-base==2.10.17
+arrow==1.2.2
+bcrypt==3.2.2
 binaryornot==0.4.4
-Cerberus==1.3.2
-certifi==2020.12.5
-cffi==1.14.5
-chardet==4.0.0
+Cerberus==1.3.4
+certifi==2022.6.15
+cffi==1.15.1
+chardet==5.0.0
+charset-normalizer==2.1.0
 click==7.1.2
 click-completion==0.5.2
-click-help-colors==0.9
-colorama==0.4.4
+click-help-colors==0.9.1
 commonmark==0.9.1
 cookiecutter==2.1.1
-cryptography==3.3.2
-distro==1.5.0
-docker==4.4.4
-enrich==1.2.6
-idna==2.10
-importlib-metadata==3.7.3
-Jinja2==2.11.3
+cryptography==37.0.4
+distro==1.7.0
+docker==5.0.3
+enrich==1.2.7
+idna==3.3
+Jinja2==3.1.2
 jinja2-time==0.2.0
-MarkupSafe==1.1.1
-molecule==3.2.3
-molecule-docker==0.2.4
-packaging==20.9
-paramiko==2.10.1
-pathspec==0.8.1
+MarkupSafe==2.1.1
+packaging==21.3
+paramiko==2.11.0
+pathspec==0.9.0
 pluggy==0.13.1
-poyo==0.5.0
-pycparser==2.20
-Pygments==2.8.1
-PyNaCl==1.4.0
-pyparsing==2.4.7
-python-dateutil==2.8.1
-python-slugify==4.0.1
+pycparser==2.21
+Pygments==2.12.0
+PyNaCl==1.5.0
+pyparsing==3.0.9
+python-dateutil==2.8.2
+python-slugify==6.1.2
 PyYAML==5.4.1
-requests==2.25.1
-rich==9.13.0
+requests==2.28.1
+rich==12.5.1
 selinux==0.2.1
-shellingham==1.4.0
-six==1.15.0
-subprocess-tee==0.2.0
+shellingham==1.5.0
+six==1.16.0
+subprocess-tee==0.3.5
 text-unidecode==1.3
-typing-extensions==3.7.4.3
-urllib3==1.26.5
-websocket-client==0.58.0
-yamllint==1.26.0
-zipp==3.4.1
+urllib3==1.26.11
+websocket-client==1.3.3
+yamllint==1.27.1
