--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -121,7 +121,7 @@
     # Issue: https://github.com/tiny-pilot/tinypilot/issues/963
     - molecule-idempotence-notest
 
-- name: get TinyPilot repo
+- name: '[DEPRECATED] get TinyPilot repo'
   # Don't escalate privileges because only the directory owner can use git.
   # Issue: https://github.com/tiny-pilot/tinypilot/issues/963
   become: no
