--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -26,3 +26,8 @@ tinypilot_app_settings_file: "/home/{{ tinypilot_user }}/app_settings.cfg"
 # (Experimental): Install the Janus WebRTC server to enable uStreamer to stream
 # video over H264 instead of MJPEG.
 tinypilot_install_janus: no
+
+# uStreamer version to use on systems prior to Raspbian Bullseye (Debian 11).
+ustreamer_repo_version_legacy: v4.13
+# uStreamer version to use on Raspbian Bullseye (Debian 11) or later systems.
+ustreamer_repo_version_modern: v5.23
