--- a/tasks/ustreamer.yml
+++ b/tasks/ustreamer.yml
@@ -1,4 +1,20 @@
 ---
+- name: check if OS is Raspberry Pi OS
+  set_fact:
+    tinypilot_is_os_raspbian: "{{ ansible_lsb.id is defined and ansible_lsb.id == 'Raspbian' }}"
+
+- name: choose the default version of uStreamer to install
+  set_fact:
+    ustreamer_repo_version: "{{ ustreamer_repo_version_modern }}"
+  when: ustreamer_repo_version is not defined
+
+- name: override the target version of uStreamer with a legacy version for compatibility
+  set_fact:
+    ustreamer_repo_version: "{{ ustreamer_repo_version_legacy }}"
+  when: ((ustreamer_repo_version is not defined) and
+           tinypilot_is_os_raspbian and
+           ((ansible_distribution_major_version | int) <= 10))
+
 - name: import uStreamer role
   import_role:
     name: ansible-role-ustreamer
