--- a/vars/main.yml
+++ b/vars/main.yml
@@ -11,9 +11,7 @@ ustreamer_interface: '127.0.0.1'
 ustreamer_port: 8001
 ustreamer_repo: https://github.com/tiny-pilot/ustreamer.git
 
-janus_deb_file: https://github.com/tiny-pilot/janus-debian/releases/download/1.0.1/janus_1.0.1-20220519_armhf.deb
-# These variables are only used within this role and don't affect the Janus
-# installation config.
-janus_install_dir: /opt/janus
-janus_ws_ip: '127.0.0.1'
-janus_ws_port: 8002
+ustreamer_h264_sink: tinypilot::ustreamer::h264
+ustreamer_h264_sink_mode: 777
+ustreamer_h264_sink_rm: yes
+ustreamer_janus_port: 8002
