--- a/meta/requirements.yml
+++ b/meta/requirements.yml
@@ -1,4 +1,6 @@
 ---
 - src: https://github.com/tiny-pilot/ansible-role-ustreamer
+  # TODO(jotaen): Remove `version` once the `import-janus` branch in
+  #               `ansible-role-ustreamer` is merged.
   version: 6a378caeffad46bb658a13eca4c2b6dc1cabe659
 - src: https://github.com/tiny-pilot/ansible-role-nginx
