--- a/vars/main.yml
+++ b/vars/main.yml
@@ -10,3 +10,8 @@ tinypilot_user: tinypilot
 ustreamer_interface: '127.0.0.1'
 ustreamer_port: 8001
 ustreamer_repo: https://github.com/tiny-pilot/ustreamer.git
+# Assigning `ustreamer_h264_sink` will make the uStreamer role install the Janus
+# server on the system, and thus enable H264 video streaming.
+ustreamer_h264_sink: tinypilot::ustreamer::h264
+ustreamer_h264_sink_mode: 777
+ustreamer_h264_sink_rm: yes
