--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -26,6 +26,7 @@ provisioner:
       all:
         vars:
           ansible_user: root
+          ustreamer_h264_sink: null
 verifier:
   name: ansible
 scenario:
