--- a/tasks/ustreamer.yml
+++ b/tasks/ustreamer.yml
@@ -13,6 +13,11 @@
   when: tinypilot_is_os_raspbian and
           ((ansible_distribution_major_version | int) <= 10)
 
+- debug:
+    var: ustreamer_interface
+
+- debug:
+    var: lookup('vars', 'ustreamer_interface')
 
 # https://github.com/kzap/ansible-parent-role-defaults-example
 - name: override other uStreamer vars
