--- a/tasks/ustreamer.yml
+++ b/tasks/ustreamer.yml
@@ -13,6 +13,9 @@
   when: tinypilot_is_os_raspbian and
           ((ansible_distribution_major_version | int) <= 10)
 
+- debug:
+    var: ustreamer_overrides
+
 - name: import uStreamer role
   import_role:
     name: ansible-role-ustreamer
