--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -27,7 +27,12 @@ provisioner:
         vars:
           ansible_user: root
           ustreamer_overrides:
+            ustreamer_interface: '127.0.0.1'
+            ustreamer_port: 8001
+            ustreamer_repo: https://github.com/tiny-pilot/ustreamer.git
             ustreamer_h264_sink: null
+            ustreamer_h264_sink_mode: null
+            ustreamer_h264_sink_rm: null
 verifier:
   name: ansible
 scenario:
