--- a/meta/requirements.yml
+++ b/meta/requirements.yml
@@ -1,3 +1,4 @@
 ---
 - src: https://github.com/tiny-pilot/ansible-role-ustreamer
+  version: output-role-vars
 - src: https://github.com/tiny-pilot/ansible-role-nginx
