--- a/meta/requirements.yml
+++ b/meta/requirements.yml
@@ -1,4 +1,4 @@
 ---
 - src: https://github.com/tiny-pilot/ansible-role-ustreamer
-  version: output-role-vars
+  version: output-role-vars2
 - src: https://github.com/tiny-pilot/ansible-role-nginx
