--- a/vars/main.yml
+++ b/vars/main.yml
@@ -3,6 +3,9 @@
 # updates) relies on the tinypilot user being named "tinypilot" so changing this
 # value will break updates.
 tinypilot_user: tinypilot
+tinypilot_group: tinypilot
+
+tinypilot_dir: /opt/tinypilot
 
 # uStreamer variables are placed here, instead of in `defaults/main.yml`,
 # in order to elevate their variable precedence. These variables will now
