--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -1,11 +1,15 @@
 ---
 - name: Converge
   hosts: all
+  gather_facts: no
   tasks:
-    - name: Update apt cache
+    - name: Update apt cache & install system dependencies
       apt:
+        name: lsb-release
         update_cache: true
         cache_valid_time: 600
+    - name: Gather facts
+      setup:
     - name: "Include ansible-role-tinypilot"
       include_role:
         name: "ansible-role-tinypilot"
