--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -3,9 +3,14 @@
   hosts: all
   gather_facts: no
   tasks:
-    - name: Update apt cache & install system dependencies
+    - name: Update apt cache and install system dependencies
       apt:
-        name: lsb-release
+        name:
+          # To accurately detect the OS of the target machine, we need to
+          # install the lsb-release package before Ansible gathers facts. This
+          # ensures that the ansible_lsb fact is defined.
+          # https://docs.ansible.com/ansible/latest/playbook_guide/playbooks_conditionals.html#conditionals-based-on-ansible-facts
+          - lsb-release
         update_cache: true
         cache_valid_time: 600
     - name: Gather facts
