--- a/tasks/install_tinypilot_git.yml
+++ b/tasks/install_tinypilot_git.yml
@@ -1,5 +1,32 @@
+
 # Installing TinyPilot via git is deprecated and no longer used for production
 # installs, but we still rely on it for testing the Ansible role.
+
+- name: collect TinyPilot required apt packages on all systems
+  set_fact:
+    tinypilot_packages:
+      - git
+      - python3-venv
+      - sudo
+    can_install_pip3: >-
+      {{ (ansible_distribution == 'Debian' and ansible_distribution_version is version('11', '>='))
+         or (ansible_distribution == 'Ubuntu' and ansible_distribution_version is version('20.04', '>=')) }}
+
+- name: add pip to required apt packages
+  set_fact:
+    tinypilot_packages: "{{ tinypilot_packages }} + ['python-pip']"
+  when: not can_install_pip3
+
+- name: add pip3 to required apt packages
+  set_fact:
+    tinypilot_packages: "{{ tinypilot_packages }} + ['python3-pip']"
+  when: can_install_pip3
+
+- name: install TinyPilot pre-requisite packages
+  apt:
+    name: "{{ tinypilot_packages }}"
+    state: present
+
 - name: create TinyPilot folder
   file:
     path: "{{ tinypilot_dir }}"
